Thu Oct  8 19:07:56 UTC 2009  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_home.cpp:
        * TAO_IDL/be/be_component.cpp:
        * TAO_IDL/be/be_eventtype_fwd.cpp:
        * TAO_IDL/be/be_component_fwd.cpp:
        * TAO_IDL/be/be_eventtype.cpp:
        
          Made accept() operations no-ops when -Sm (ignore IDL3
          constructs) is present. This behavior eliminates the
          need for an error message about improper use of -Sm,
          so this error message was disabled.

Thu Oct  8 14:30:33 UTC 2009  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_extended_port/extended_port_svh.cpp:
        * TAO_IDL/be/be_visitor_component/component_svh.cpp:
        
          Fixed unused arg warnings.

Thu Oct  8 14:02:45 UTC 2009  Vladimir Zykov  <vz@prismtech.com>

        * orbsvcs/orbsvcs/Trader/Trader_Utils.cpp:
        * orbsvcs/tests/Notify/performance-tests/RedGreen/RedGreen_Test.cpp:

          Fixed an undefined behaviour in the Trading Service and in the
          test when they try to access sequence elements without properly
          set length.

        * orbsvcs/tests/Trading/import_test.cpp:
        * orbsvcs/tests/Trading/export_test.cpp:

          Improved test's output.

Thu Oct  8 07:40:09 UTC 2009  Vladimir Zykov  <vz@prismtech.com>

        * NEWS:

          Updated news file with the user visible changes made for
          bug#3746.

Wed Oct  7 15:20:16 UTC 2009  Vladimir Zykov  <vz@prismtech.com>

        * tests/Param_Test/ub_any_seq.cpp:

          Fixed an undefined behaviour in the test when it tries
          to access sequence elements without prior calling length().

Wed Oct  7 15:10:55 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_sequence/sequence_ch.cpp:
	  Don't use explicit

Wed Oct  7 14:23:32 UTC 2009  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_field/cdr_op_cs.cpp: